Nuevas cartas y detalles

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <header>
         <div class="container">
-            <p class="logo">AlHorno</p>
+            <p class="logo">AlHorno Mérida</p>
             <nav>
                 <a href="#titulo">Nuestras Pizzas y precios</a>
                 <a href="#nosotros">Sobre Nosotros</a>
@@ -163,7 +163,7 @@
         <article class="container">
             <h2>Americana</h2>
             <p>Pequeña 3$ / Mediana 6$ </p>
-            <img src="img/pizza5.jpg">
+            <img src="img/Americana.jpeg">
             <p>Esta pizza tan rica contiene los siguientes ingredientes</p>
             <p class="ingredientes">
                 Salsa, Mozzarela, Jamón, Tocineta, <br>
@@ -279,7 +279,7 @@
         <article class="container">
             <h2>Albahaca</h2>
             <p>Pequeña 3$ / Mediana 6$</p>
-            <img src="img/pizza5.jpg">
+            <img src="img/Albahaca.jpeg">
             <p>Esta pizza tan rica contiene los siguientes ingredientes </p>
             <p class="ingredientes">
                 Salsa, Mozzarela, Jamón, Tomate, <br>
@@ -355,34 +355,65 @@
                 Salsa, Mozzarela, Pollo, Tocineta, <br>
                 Maíz y Tomate.
                </p>
- <!--                <table>
-                    <thead>
-                        <tr>
-                            <th>Salsa </th>
-                            <th>Mozzarela</th>
-                            <th>Pollo</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Tocineta</td>
-                            <td>Maíz</td>
-                            <td>Tomate</td>
-                        </tr>
-                    </tbody>
-                </table> -->
-                <!-- <ul>
-                    <li>Salsa</li>
-                    <li>Mozzarela</li>
-                    <li>Pollo</li>
-                    <li>Maíz</li>
-                    <li>Tocineta</li>
-                    <li>Tomate</li>
-                </ul> -->
                 <br><br>
                 <button>Ordenar</button>
             </p>
-        </article>   
+        </article>
+        <article class="container2">
+            <h2>A tu Gusto</h2>
+            <p>Pequeña 3$ / Mediana 6$</p>
+            <img src="img/pizza5.jpg">
+            <p>Esta pizza tan rica puedes armarla con
+                 2 Protenias y 2 Vegetales a tu elección</p>
+            <p class="ingredientes2">
+                Proteinas (Jamón,Pollo,Tocineta,<br>Pepperoni,Piña,Parmesano) <br><br>
+                Vegetales (Cebolla,Tomate,Pimentón,<br>Maíz,Champiñones,Aceitunas negras,Salsa Pesto)
+               </p>
+                <br><br>
+                <button>Ordenar</button>
+            </p>
+        </article>    
+        <article class="container">
+            <h2>Tipo Chicago</h2>
+            <p>Pizza para 2 o 3 Personas (Mediana) </p>
+            <img src="img/pizza5.jpg">
+            <p>Esta pizza tan rica tipo chicago contiene una base más profunda
+                de queso Mozzarela </p>
+            <p class="ingredientes">
+                Margarita 10$, Hawaiana 11$,<br> Italiana 11.5$, Demás Pizzas
+                12$
+               </p>
+                <br><br>
+                <button>Ordenar</button>
+            </p>
+        </article>  
+        <article class="container">
+            <h2>Bebidas</h2>
+            <p>Bebidas individuales y para el grupo</p>
+            <img src="img/Bebida.jpeg">
+            <p>Aqui encontraras los precios de nuestras bebidas</p>
+            <p class="ingredientes">
+               Refresco de Vaso - 0,75$<br>Refresco 2L - 3,75$ <br>
+               Té Frio - 0,85$, Jugos Naturales - 1$
+               </p>
+                <br><br>
+                <button>Ordenar</button>
+            </p>
+        </article>  
+        <article class="container">
+            <h2>Envases</h2>
+            <p>Envases para llevar</p>
+            <img src="img/Bebida.jpeg">
+            <p>Aqui encontraras los precios de nuestros Envases</p>
+            <p class="ingredientes">
+              Pizza Pequeña - 0,15$ <br>
+              Pizza Mediana - 0,25$ <br>
+              Pizza Chicago - 1$
+               </p>
+                <br><br>
+                <button>Ordenar</button>
+            </p>
+        </article>  
     </section>
     
     <section id="nosotros">
@@ -390,6 +421,12 @@
         <h3>Estamos Ubicados en el Centro <br>
         de la ciudad de Mérida en la Avenida <br>
         2 Lora frente al Edificio el Alba</h3>
+        <p>Trabajamos todos los días de 12pm hasta las 10pm <br>
+        Contamos con Delivery</p>
+        <p>Número de Contacto/WhatsApp: 0424 - 4420666</p>
+       <p>Click Aquí para visitar nuestro Ig --> 
+        <a target="_blank" href="https://www.instagram.com/alhornomerida/?hl=es">Instagram @alhornomerida</a>
+       </p> 
 
     </section>
     <br><br><br>
