Cambios en el zoom y nueva seccion

--- a/index.html
+++ b/index.html
@@ -414,7 +414,16 @@
                 <button>Ordenar</button>
             </p>
         </article>  
-    </section>
+    </section> <br><br>
+    <section class="galeria">
+        <img src="img/Americana.jpeg">
+        <img src="img/Albahaca.jpeg" >
+        <img src="img/pizza5.jpg">
+        <img src="img/Corral.jfif">
+        <img src="img/Texana.jfif">
+        <img src="img/Vegetariana.jfif">
+        <img src="img/Italiana.jpeg">
+    </section>    
     
     <section id="nosotros">
 
