Agregando pizzas y logos

--- a/index.html
+++ b/index.html
@@ -16,15 +16,17 @@
 
     <header>
         <div class="container">
-            <p class="logo">AlHorno Mérida</p>
+            <p class="logo">AlHorno</p>
             <nav>
-                <a href="#titulo">Nuestras Pizzas y precios</a>
+                <a href="#titulo">Nuestras Pizzas y Precios</a>
                 <a href="#nosotros">Sobre Nosotros</a>
+                <a href="#galeria">Galeria de Fotos</a>
             </nav>
         </div>
     </header>
-    <br><br>
-    <div id="titulo"><h1>Pizza's</h1></div>
+    <br><br><br><br>
+    <div id="titulo"> <img class="img1" src="img/logo1.jfif"> 
+     <h1>  Pizza's </h1>  <img class="img2" src="img/logo2.jpeg"> </div>
 
     <section id="post">
         
@@ -362,7 +364,7 @@
         <article class="container2">
             <h2>A tu Gusto</h2>
             <p>Pequeña 3$ / Mediana 6$</p>
-            <img src="img/pizza5.jpg">
+            <img src="img/atugusto.jfif">
             <p>Esta pizza tan rica puedes armarla con
                  2 Protenias y 2 Vegetales a tu elección</p>
             <p class="ingredientes2">
@@ -376,7 +378,7 @@
         <article class="container">
             <h2>Tipo Chicago</h2>
             <p>Pizza para 2 o 3 Personas (Mediana) </p>
-            <img src="img/pizza5.jpg">
+            <img src="img/chicago.jfif">
             <p>Esta pizza tan rica tipo chicago contiene una base más profunda
                 de queso Mozzarela </p>
             <p class="ingredientes">
@@ -415,16 +417,23 @@
             </p>
         </article>  
     </section> <br><br>
+    <div id="galeria">
     <section class="galeria">
         <img src="img/Americana.jpeg">
         <img src="img/Albahaca.jpeg" >
-        <img src="img/pizza5.jpg">
         <img src="img/Corral.jfif">
         <img src="img/Texana.jfif">
         <img src="img/Vegetariana.jfif">
         <img src="img/Italiana.jpeg">
+        <img src="img/Margarita.jpeg">
+        <img src="img/atugusto.jfif" >
+        <img src="img/chicago.jfif" >
+        <img src="img/chicago2.jpeg" >
+        <img src="img/pizzas.jfif" >
+        <img src="img/logo1.jpeg" >
+        <img src="img/titulo.jfif" >
     </section>    
-    
+    </div>
     <section id="nosotros">
 
         <h3>Estamos Ubicados en el Centro <br>
