--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         <article class="container">
             <h2>Pepper</h2>
             <p>Pequeña 3$ / Mediana 6$</p>
-            <img src="img/pizza5.jpg">
+            <img src="img/Pepper.jfif">
             <p>Esta pizza tan rica contiene los siguientes ingredientes </p>
             <p class="ingredientes">
                 Salsa, Mozzarela, Pepperoni, Cebolla, <br>
@@ -419,19 +419,16 @@
     </section> <br><br>
     <div id="galeria">
     <section class="galeria">
-        <img src="img/Americana.jpeg">
-        <img src="img/Albahaca.jpeg" >
         <img src="img/Corral.jfif">
-        <img src="img/Texana.jfif">
         <img src="img/Vegetariana.jfif">
         <img src="img/Italiana.jpeg">
         <img src="img/Margarita.jpeg">
-        <img src="img/atugusto.jfif" >
-        <img src="img/chicago.jfif" >
         <img src="img/chicago2.jpeg" >
         <img src="img/pizzas.jfif" >
         <img src="img/logo1.jpeg" >
-        <img src="img/titulo.jfif" >
+        <img src="img/Pepper.jfif">
+        <img src="img/place.jpeg">
+
     </section>    
     </div>
     <section id="nosotros">
