--- a/index.html
+++ b/index.html
@@ -217,19 +217,26 @@
     </section>    
     </div>
     <section id="nosotros">
-
+        <br>
+        <p class="descrip">"Al Horno Mérida Pizzería, es una empresa familiar creada en Junio del 2020 <br>
+            dirigida por Andrés Uzcátegui y su Esposa, en donde encontrarás pizzas artesanales <br>
+            hechas por sus propios dueños. El secreto de nuestra pizza es el calor de hogar que <br>
+            llevan cada una de ellas."
+           </p> 
         <h3> <a target="_blank" href="https://www.google.com/maps/place/Pizzería+Al+Horno+Mérida/@8.5961246,-71.1509867,17z/data=!3m1!4b1!4m6!3m5!1s0x8e6487e5db7cd95d:0xe8706c614c4704a4!8m2!3d8.5961193!4d-71.1484064!16s%2Fg%2F11lsznfwsg?hl=es&entry=ttu">
+        Google Maps <br>
         Estamos Ubicados en el Centro <br>
         de la ciudad de Mérida en la Avenida <br>
         2 Lora frente al Edificio el Alba</h3> </a>
-        <p>Trabajamos todos los días de 12pm hasta las 10pm <br>
-        Contamos con Delivery</p>
+        <p>Lunes - Sabado : 12:30pm - 10pm<br>
+            Domingos: 12:30pm - 8pm <br> <br>
+        <span>Contamos con Delivery</p></span>
         <br><br>
        <a target="_blank" href="https://api.whatsapp.com/send/?phone=584126469666&text=Hola%21+Quisiera+realizar+un+pedido+por+favor+&type=phone_number&app_absent=0">
-        Para hacer tu pedido Contacto/WhatsApp: 0412 - 6469666 </a> 
+        Click Aquí para hacer tu pedido por WhatsApp: 0412 - 6469666 </a> 
        <p> <a target="_blank" href="https://www.instagram.com/alhornomerida/?hl=es">Click Aquí para visitar nuestro Instagram-> 
        @alhornomerida</p></a> 
-
+       <br>
     </section>
     <br><br><br>
     <footer>
