--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 
 <body>
@@ -224,18 +225,18 @@
             llevan cada una de ellas."
            </p> 
         <h3> <a target="_blank" href="https://www.google.com/maps/place/Pizzería+Al+Horno+Mérida/@8.5961246,-71.1509867,17z/data=!3m1!4b1!4m6!3m5!1s0x8e6487e5db7cd95d:0xe8706c614c4704a4!8m2!3d8.5961193!4d-71.1484064!16s%2Fg%2F11lsznfwsg?hl=es&entry=ttu">
-        Google Maps <br>
+        <i class="fa-solid fa-location-dot"></i><br>
         Estamos Ubicados en el Centro <br>
         de la ciudad de Mérida en la Avenida <br>
         2 Lora frente al Edificio el Alba</h3> </a>
         <p>Lunes - Sabado : 12:30pm - 10pm<br>
             Domingos: 12:30pm - 8pm <br> <br>
         <span>Contamos con Delivery</p></span>
-        <br><br>
-       <a target="_blank" href="https://api.whatsapp.com/send/?phone=584126469666&text=Hola%21+Quisiera+realizar+un+pedido+por+favor+&type=phone_number&app_absent=0">
-        Click Aquí para hacer tu pedido por WhatsApp: 0412 - 6469666 </a> 
-       <p> <a target="_blank" href="https://www.instagram.com/alhornomerida/?hl=es">Click Aquí para visitar nuestro Instagram-> 
-       @alhornomerida</p></a> 
+       <a class="a1" target="_blank" href="https://api.whatsapp.com/send/?phone=584126469666&text=Hola%21+Quisiera+realizar+un+pedido+por+favor+&type=phone_number&app_absent=0"> Para ordenar
+        <i class="fa-brands fa-whatsapp"></i></a> 
+       <a class="a1" target="_blank" href="https://www.instagram.com/alhornomerida/?hl=es">
+        instagram <i class="fa-brands fa-instagram"></i>
+       </a> 
        <br>
     </section>
     <br><br><br>
