Ordenar funcion y cambios de estilos

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
             <p class="ingredientes">
                 Salsa, Mozzarella, Jamón y Orégano.
                </p>
-                <button>Ordenar</button>
+               <div> <a class="a1" target="_blank" href="https://api.whatsapp.com/send/?phone=584126469666&text=Hola%21+Quisiera+realizar+un+pedido+por+favor+&type=phone_number&app_absent=0"> Para ordenar
+                <i class="fa-brands fa-whatsapp"></i></a></div>
+                <button>Ordenar</button> 
             </p>
         </article>
         <br>
@@ -51,6 +53,8 @@
             <p class="ingredientes">
                 Salsa, Mozzarella, Jamón, Piña y/o Bocadillo.
                </p>
+               <div> <a class="a1" target="_blank" href="https://api.whatsapp.com/send/?phone=584126469666&text=Hola%21+Quisiera+realizar+un+pedido+por+favor+&type=phone_number&app_absent=0"> Para ordenar
+                <i class="fa-brands fa-whatsapp"></i></a></div>
                 <button>Ordenar</button> 
         </article> 
         <article class="container">
@@ -62,7 +66,8 @@
                 Salsa, Mozzarella, Tomate, <br> 
                 Aceitunas negras, Parmesano y Orégano.
                </p>
-                <br>
+               <div> <a class="a1" target="_blank" href="https://api.whatsapp.com/send/?phone=584126469666&text=Hola%21+Quisiera+realizar+un+pedido+por+favor+&type=phone_number&app_absent=0"> Para ordenar
+                <i class="fa-brands fa-whatsapp"></i></a></div>
                 <button>Ordenar</button>    
         </article> 
         <article class="container">
@@ -75,9 +80,10 @@
                 Champiñones, Maíz, Aceitunas negras, <br>
                 y Orégano.
                </p>
+               <div> <a class="a1" target="_blank" href="https://api.whatsapp.com/send/?phone=584126469666&text=Hola%21+Quisiera+realizar+un+pedido+por+favor+&type=phone_number&app_absent=0"> Para ordenar
+                <i class="fa-brands fa-whatsapp"></i></a></div>
                 <button>Ordenar</button>
         </article>
-            <br>
         <article class="container">
             <h2>Americana</h2>
             <p>Pequeña 3$ / Mediana 6$ </p>
@@ -87,8 +93,8 @@
                 Salsa, Mozzarella, Jamón, Tocineta, <br>
                 Champiñones y Orégano.
                </p>
-                <br><br>
-                <button>Ordenar</button>
+                <div><a class="a1" target="_blank" href="https://api.whatsapp.com/send/?phone=584126469666&text=Hola%21+Quisiera+realizar+un+pedido+por+favor+&type=phone_number&app_absent=0"> Para ordenar
+                    <i class="fa-brands fa-whatsapp"></i></a></div>
         </article>
         <article class="container">
             <h2>Pepper</h2>
@@ -99,7 +105,8 @@
                 Salsa, Mozzarella, Pepperoni, Cebolla, <br>
                 Aceitunas negras y Orégano.
                </p>
-                <br>
+               <div> <a class="a1" target="_blank" href="https://api.whatsapp.com/send/?phone=584126469666&text=Hola%21+Quisiera+realizar+un+pedido+por+favor+&type=phone_number&app_absent=0"> Para ordenar
+                <i class="fa-brands fa-whatsapp"></i></a></div>
                 <button>Ordenar</button>
         </article>
         <article class="container">
@@ -111,7 +118,8 @@
                  Salsa, Mozzarella, Pepperoni, <br>
                  Tocineta, Pimentón, Maíz y Orégano.  
                 </p>
-                <br>
+                <div> <a class="a1" target="_blank" href="https://api.whatsapp.com/send/?phone=584126469666&text=Hola%21+Quisiera+realizar+un+pedido+por+favor+&type=phone_number&app_absent=0"> Para ordenar
+                    <i class="fa-brands fa-whatsapp"></i></a></div>
                 <button>Ordenar</button>        
         </article>
         <article class="container">
@@ -123,7 +131,8 @@
                 Salsa, Mozzarella, Jamón, Tomate, <br>
                 Salsa Pesto, Maíz y Orégano.
                </p>
-                <br><br>
+               <div> <a class="a1" target="_blank" href="https://api.whatsapp.com/send/?phone=584126469666&text=Hola%21+Quisiera+realizar+un+pedido+por+favor+&type=phone_number&app_absent=0"> Para ordenar
+                <i class="fa-brands fa-whatsapp"></i></a></div>
                 <button>Ordenar</button>
         </article>
         <article class="container">
@@ -135,7 +144,8 @@
                 Salsa, Mozzarella, Pollo, <br>
                 Maíz y Cebolla Caramelizada.
                </p>
-                <br>
+               <div> <a class="a1" target="_blank" href="https://api.whatsapp.com/send/?phone=584126469666&text=Hola%21+Quisiera+realizar+un+pedido+por+favor+&type=phone_number&app_absent=0"> Para ordenar
+                <i class="fa-brands fa-whatsapp"></i></a></div>
                 <button>Ordenar</button>
         </article>
         <article class="container">
@@ -147,7 +157,8 @@
                 Salsa, Mozzarella, Pollo, Tocineta, <br>
                 Maíz y Tomate.
                </p>
-                <br><br>
+               <div> <a class="a1" target="_blank" href="https://api.whatsapp.com/send/?phone=584126469666&text=Hola%21+Quisiera+realizar+un+pedido+por+favor+&type=phone_number&app_absent=0"> Para ordenar
+                <i class="fa-brands fa-whatsapp"></i></a></div>
                 <button>Ordenar</button>
             </p>
         </article>
@@ -160,24 +171,24 @@
                 Proteinas (Jamón,Pollo,Tocineta,<br>Pepperoni,Piña,Parmesano) <br><br>
                 Vegetales (Cebolla,Tomate,Pimentón,<br>Maíz,Champiñones,Aceitunas negras,Salsa Pesto)
                </p>
-                <br><br>
-                <button>Ordenar</button>
-            </p>
+               <div> <a class="a1" target="_blank" href="https://api.whatsapp.com/send/?phone=584126469666&text=Hola%21+Quisiera+realizar+un+pedido+por+favor+&type=phone_number&app_absent=0"> Para ordenar
+                <i class="fa-brands fa-whatsapp"></i></a></div>
         </article>    
         <article class="container">
             <h2>Tipo Chicago</h2>
             <p>Pizza para 2 o 3 Personas (Mediana) </p>
-            <img src="img/chicago.jfif">
+            <img src="img/chicagonew.jfif">
             <p>Pizza de masa más gruesa y queso Mozzarella </p>
             <p class="ingredientes">
                 Margarita 10$, Hawaiana 11$,<br> Italiana 11.5$, Demás Pizzas
                 12$
                </p>
-                <br><br>
+               <div> <a class="a1" target="_blank" href="https://api.whatsapp.com/send/?phone=584126469666&text=Hola%21+Quisiera+realizar+un+pedido+por+favor+&type=phone_number&app_absent=0"> Para ordenar
+                <i class="fa-brands fa-whatsapp"></i></a></div>
                 <button>Ordenar</button>
             </p>
         </article>  
-        <article class="container">
+        <article class="container3">
             <h2>Bebidas</h2>
             <p>Bebidas individuales y para el grupo</p>
             <img src="img/Bebida.jpeg">
@@ -189,7 +200,7 @@
                 <button>Ordenar</button>
             </p>
         </article>  
-        <article class="container">
+        <article class="container3">
             <h2>Envases</h2>
             <p>Envases para llevar</p>
             <img src="img/Bebida.jpeg">
@@ -225,17 +236,17 @@
             llevan cada una de ellas."
            </p> 
         <h3> <a target="_blank" href="https://www.google.com/maps/place/Pizzería+Al+Horno+Mérida/@8.5961246,-71.1509867,17z/data=!3m1!4b1!4m6!3m5!1s0x8e6487e5db7cd95d:0xe8706c614c4704a4!8m2!3d8.5961193!4d-71.1484064!16s%2Fg%2F11lsznfwsg?hl=es&entry=ttu">
-        <i class="fa-solid fa-location-dot"></i><br>
+        <i class="fa-solid fa-location-dot"></i>    Google Map  <i class="fa-solid fa-location-dot"></i><br>
         Estamos Ubicados en el Centro <br>
         de la ciudad de Mérida en la Avenida <br>
         2 Lora frente al Edificio el Alba</h3> </a>
         <p>Lunes - Sabado : 12:30pm - 10pm<br>
             Domingos: 12:30pm - 8pm <br> <br>
         <span>Contamos con Delivery</p></span>
-       <a class="a1" target="_blank" href="https://api.whatsapp.com/send/?phone=584126469666&text=Hola%21+Quisiera+realizar+un+pedido+por+favor+&type=phone_number&app_absent=0"> Para ordenar
+        <a class="a1" target="_blank" href="https://api.whatsapp.com/send/?phone=584126469666&text=Hola%21+Quisiera+realizar+un+pedido+por+favor+&type=phone_number&app_absent=0"> <i class="fa-brands fa-whatsapp"></i>  WhatsApp
         <i class="fa-brands fa-whatsapp"></i></a> 
        <a class="a1" target="_blank" href="https://www.instagram.com/alhornomerida/?hl=es">
-        instagram <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-instagram"></i> Instagram <i class="fa-brands fa-instagram"></i>
        </a> 
        <br>
     </section>
