Mejorando version mobile

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <h2>Tipo Chicago</h2>
             <p>Pizza para 2 o 3 Personas (Mediana) </p>
             <img src="img/chicagonew.jfif">
-            <p>Pizza de masa más gruesa y queso Mozzarella </p>
+            <p>Pizza de masa más gruesa y 1/2 Kg de queso Mozzarella </p>
             <p class="ingredientes">
                 Margarita 10$, Hawaiana 11$,<br> Italiana 11.5$, Demás Pizzas
                 12$
