Cambiando foto de envases

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         <article class="container3">
             <h2>Envases</h2>
             <p>Envases para llevar</p>
-            <img src="img/Bebida.jpeg">
+            <img src="img/Envase.jpg">
             <p class="ingredientes">
               Pizza Pequeña - 0,15$ <br>
               Pizza Mediana - 0,25$ <br>
