Agreando Panzerotti y detalles

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <article class="container">
             <h2>Granjera</h2>
             <p>Pequeña 3$ / Mediana 6$</p>
-            <img src="img/pizza5.jpg">
+            <img src="img/Granjera.jfif">
             <p>Ingredientes:</p>
             <p class="ingredientes">
                 Salsa, Mozzarella, Pollo, Tocineta, <br>
@@ -169,8 +169,8 @@
             <img src="img/atugusto.jfif">
             <p>Ingredientes a preferir:</p>
             <p class="ingredientes2">
-                Proteinas (Jamón,Pollo,Tocineta,<br>Pepperoni,Piña,Parmesano) <br><br>
-                Vegetales (Cebolla,Tomate,Pimentón,<br>Maíz,Champiñones,Aceitunas negras,Salsa Pesto)
+                2 Proteinas (Jamón,Pollo,Tocineta,<br>Pepperoni,Piña,Parmesano) <br><br>
+                2 Vegetales (Cebolla,Tomate,Pimentón,<br>Maíz,Champiñones,Aceitunas negras,Salsa Pesto)
                </p>
                <div> <a class="a1" target="_blank" href="https://api.whatsapp.com/send/?phone=584126469666&text=Hola%21+Quisiera+ordenar+una+A+Tu+Gusto+por+favor+&type=phone_number&app_absent=0"> Para ordenar
                 <i class="fa-brands fa-whatsapp"></i></a></div>
@@ -189,6 +189,20 @@
                 <button>Ordenar</button>
             </p>
         </article>  
+        <article class="container">
+            <h2>Panzerotti's</h2>
+            <p>Pizza tipo Panzerotti para 1 persona</p>
+            <img src="img/Panzerotti.jfif">
+            <p>Ingredientes:</p>
+            <p class="ingredientes">
+                Margarita - 2.5$, Hawaiano - 3$, <br> Italiano - 3.25$, 
+                Demas sabores 3.5$.
+               </p>
+               <div> <a class="a1" target="_blank" href="https://api.whatsapp.com/send/?phone=584126469666&text=Hola%21+Quisiera+ordenar+una+Granjera+por+favor+&type=phone_number&app_absent=0"> Para ordenar
+                <i class="fa-brands fa-whatsapp"></i></a></div>
+                <button>Ordenar</button>
+            </p>
+        </article> 
         <article class="container3">
             <h2>Bebidas</h2>
             <p>Bebidas individuales y para el grupo</p>
@@ -213,7 +227,8 @@
                 <br><br>
                 <button>Ordenar</button>
             </p>
-        </article>  
+        </article> 
+
     </section> <br>
     <div id="galeria">
     <section class="galeria">
