--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <h2>Tipo Chicago</h2>
             <p>Pizza para 2 o 3 Personas (Mediana) </p>
             <img src="img/chicagonew.jfif">
-            <p>Pizza de masa más gruesa y 1/2 Kg de queso Mozzarella </p>
+            <p>Pizza de masa más gruesa con 500 gramos de queso Mozzarella </p>
             <p class="ingredientes">
                 Margarita 10$, Hawaiana 11$,<br> Italiana 11.5$, Demás Pizzas
                 12$
@@ -193,7 +193,7 @@
             <h2>Panzerotti's</h2>
             <p>Pizza tipo Panzerotti para 1 persona</p>
             <img src="img/Panzerotti.jfif">
-            <p>Ingredientes:</p>
+            <p>Sabores:</p>
             <p class="ingredientes">
                 Margarita - 2.5$, Hawaiano - 3$, <br> Italiano - 3.25$, 
                 Demas sabores 3.5$.
